--- a/NoiseTubeInteractive2/res/values/strings.xml
+++ b/NoiseTubeInteractive2/res/values/strings.xml
@@ -29,4 +29,8 @@
 	<string name="profile_time">00:00:00</string>
 	<string name="no_db_lvl">Not measuring</string>
 	<string name="location_default">(50.86408;4.417720)</string>
+	<string name="home_max_db">Maximum Db:</string>
+	<string name="home_avg_db">Avgerage Db:</string>
+	<string name="home_min_db">Minimum Db:</string>
+	<string name="home_time">Running Time:</string>
 </resources>
