NW: PostResult Page

--- a/NoiseTubeInteractive2/res/values/strings.xml
+++ b/NoiseTubeInteractive2/res/values/strings.xml
@@ -20,18 +20,25 @@
     <string name="profile_line_2">Profile name of user</string>
     <string name="profile_userName">User Name</string>
     <string name="profile_email">Email Address</string>
-	<string name="profile_exp">0/247</string>
-	<string name="profile_lvl">1</string>
-	<string name="profile_lvl_text">Level: </string>
-	<string name="profile_exp_text">Experience Points: </string>
-	<string name="profile_msr_text"># Measurements: </string>
-	<string name="profile_msr">1</string>
-	<string name="profile_time_text">Time Measured: </string>
-	<string name="profile_time">00:00:00</string>
-	<string name="no_db_lvl">Not measuring</string>
-	<string name="location_default">(50.86408;4.417720)</string>
-	<string name="home_max_db">Maximum Db:</string>
-	<string name="home_avg_db">Avgerage Db:</string>
-	<string name="home_min_db">Minimum Db:</string>
-	<string name="home_time">Running Time:</string>
+    <string name="profile_exp">0/247</string>
+    <string name="profile_lvl">1</string>
+    <string name="profile_lvl_text">Level: </string>
+    <string name="profile_exp_text">Experience Points: </string>
+    <string name="profile_msr_text"># Measurements: </string>
+    <string name="profile_msr">1</string>
+    <string name="profile_time_text">Time Measured: </string>
+    <string name="profile_time">00:00:00</string>
+    <string name="no_db_lvl">Not measuring</string>
+    <string name="location_default">(50.86408;4.417720)</string>
+    <string name="home_max_db">Maximum Db:</string>
+    <string name="home_avg_db">Avgerage Db:</string>
+    <string name="home_min_db">Minimum Db:</string>
+    <string name="home_time">Running Time:</string>
+    <string name="title_activity_post_result">PostResult</string>
+    <string name="post_points">Points</string>
+    <string name="post_multi_loc">Location Multiplier</string>
+    <string name="post_multi_time">Location Multiplier</string>
+    <string name="post_multi_bonus">Bonus Multiplier</string>
+    <string name="post_points_total">Total Points</string>
+
 </resources>
