--- a/NoiseTubeInteractive2/res/values/strings.xml
+++ b/NoiseTubeInteractive2/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">NoiseTube Interactive Beta</string>
+    <string name="app_name">NoiseTube</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="action_measurement">Measure</string>
@@ -11,9 +11,9 @@
     <string name="home_button_stop">Stop</string>
     <string name="title_activity_display_message">My Message</string>
     <string name="title_activity_display_profile">Profile</string>
-    <string name="title_section1">Stats</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">Score</string>
+    <string name="title_section2">Level</string>
+    <string name="title_section3">Amount</string>
     <string name="title_activity_new_profile">Profile</string>
     <string name="profile_name">Profile Name</string>
     <string name="profile_icon">Profile Icon</string>
@@ -41,5 +41,6 @@
     <string name="post_multi_bonus">Bonus Multiplier</string>
     <string name="post_points_total">Total Points</string>
     <string name="post_lvl">Level</string>
+    <string name="title_activity_leaderboard">Leaderboard</string>
 
 </resources>
